--- a/platformio.ini
+++ b/platformio.ini
@@ -10,9 +10,14 @@
 
 [env:pico32]
 platform = espressif32
-board = pico32
+board = esp32-c3-devkitc-02
 framework = arduino
 monitor_speed = 115200
+
+build_flags = 
+	; -DCORE_DEBUG_LEVEL=5
+	-DARDUINO_USB_MODE=1
+	-DARDUINO_USB_CDC_ON_BOOT=1
 
 lib_deps = 
     nfc-rfid-reader-sdk/MFRC522_PN512@^1.4.11
