--- a/platformio.ini
+++ b/platformio.ini
@@ -13,11 +13,10 @@ platform = espressif32
 board = esp32-c3-devkitc-02
 framework = arduino
 monitor_speed = 115200
-
 build_flags = 
-	; -DCORE_DEBUG_LEVEL=5
 	-DARDUINO_USB_MODE=1
 	-DARDUINO_USB_CDC_ON_BOOT=1
 
 lib_deps = 
-    nfc-rfid-reader-sdk/MFRC522_PN512@^1.4.11
+	nfc-rfid-reader-sdk/MFRC522_PN512@^1.4.11
+	esphome/ESP32-audioI2S@^2.0.7
