--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:pico32]
+[env]
 platform = espressif32
 board = esp32-c3-devkitc-02
 framework = arduino
@@ -16,7 +16,26 @@ monitor_speed = 115200
 build_flags = 
 	-DARDUINO_USB_MODE=1
 	-DARDUINO_USB_CDC_ON_BOOT=1
+board_build.filesystem = spiffs
 
 lib_deps = 
 	nfc-rfid-reader-sdk/MFRC522_PN512@^1.4.11
-	esphome/ESP32-audioI2S@^2.0.7
+
+[env:mosnode-torchmirror]
+
+build_flags = 
+	${env.build_flags}
+	-DTORCHMIRROR
+
+[env:c3-photoframes]
+
+build_flags = 
+	${env.build_flags}
+	-DPHOTOFRAMES
+
+lib_deps =
+	${env.lib_deps}
+  	earlephilhower/ESP8266Audio @ ^1.9.7
+
+
+; [env:c3-]
