kinda working skeleton

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,8 +18,11 @@ build_flags =
 	-DARDUINO_USB_CDC_ON_BOOT=1
 board_build.filesystem = spiffs
 
+monitor_raw = yes
+
 lib_deps = 
 	nfc-rfid-reader-sdk/MFRC522_PN512@^1.4.11
+	https://github.com/cr1tbit/alfalog#v1.1.5
 
 [env:mosnode-torchmirror]
 
