split project into 3 variants

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,13 +1,3 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env]
 platform = espressif32
 board = esp32-c3-devkitc-02
@@ -24,21 +14,21 @@ lib_deps =
 	nfc-rfid-reader-sdk/MFRC522_PN512@^1.4.11
 	https://github.com/cr1tbit/alfalog#v1.1.5
 
-[env:mosnode-torchmirror]
-
-build_flags = 
-	${env.build_flags}
-	-DTORCHMIRROR
+[env:c3-torchmirror]
+build_src_filter =
+  -<main.cpp>
+  +<torchmirror.cpp>
 
 [env:c3-photoframes]
+build_src_filter =
+  -<main.cpp>
+  +<photoframes.cpp>
 
-build_flags = 
-	${env.build_flags}
-	-DPHOTOFRAMES
+; lib_deps =
+; 	${env.lib_deps}
+;   	earlephilhower/ESP8266Audio @ ^1.9.7
 
-lib_deps =
-	${env.lib_deps}
-  	earlephilhower/ESP8266Audio @ ^1.9.7
-
-
-; [env:c3-]
+[env:c3-proxchain]
+build_src_filter =
+  -<main.cpp>
+  +<proxchain.cpp>
