--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,9 @@ build_src_filter =
   -<main.cpp>
   +<photoframes.cpp>
 
+lib_deps = {env.lib_deps}
+    adafruit/Adafruit NeoPixel
+
 ; lib_deps =
 ; 	${env.lib_deps}
 ;   	earlephilhower/ESP8266Audio @ ^1.9.7
