--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 [env]
-platform = espressif32
+platform = espressif32@6.5.0
 board = esp32-c3-devkitc-02
 framework = arduino
 monitor_speed = 115200
