--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@ board_build.filesystem = spiffs
 monitor_raw = yes
 
 lib_deps = 
-	nfc-rfid-reader-sdk/MFRC522_PN512@^1.4.11
+	; nfc-rfid-reader-sdk/MFRC522_PN512@^1.4.11
 	https://github.com/cr1tbit/alfalog#v1.1.5
   adafruit/Adafruit NeoPixel
 
@@ -25,11 +25,16 @@ build_src_filter =
   -<main.cpp>
   +<photoframes.cpp>
 
-; lib_deps =
-; 	${env.lib_deps}
-;   	earlephilhower/ESP8266Audio @ ^1.9.7
-
 [env:c3-proxchain]
 build_src_filter =
   -<main.cpp>
   +<proxchain.cpp>
+
+
+[env:c3-whispers]
+build_src_filter =
+  -<main.cpp>
+  +<whispers.cpp>
+
+lib_deps =
+  	earlephilhower/ESP8266Audio @ ^1.9.7
